@@ -33,6 +33,10 @@
 * Converted from gtest to Unity: sntp/tests/ kodDatabase.c, kodFile.c,
   networking.c, keyFile.c, utilities.cpp, sntptest.h,
   fileHandlingTest.h. Damir Tomić
+* Converted from gtest to Unity: sntp/tests/ caltontp.c, humandate.c,
+  msyslog.c, prettydate.c, recvbuff.c, sfptostr.c, tstotv.c, tvtots.c,
+  sntp/tests/packetProcessing.c. Tomasz Flendrich
+* tests/libntp/msyslog.c: fixed a gcc warning. Tomasz Flendrich
 ---
 (4.2.8p3-RC2) 2015/06/24 Released by Harlan Stenn <stenn@ntp.org>
 
